@startuml

  package de.gematik.ti.cardreader.provider.pcsc.control {
    class CardReaderProvider {
        - providerDescriptor : ProviderDescriptor
        + CardReaderProvider()
        + getCardReaderController()
        + getDescriptor()
    }
  }


  package de.gematik.ti.cardreader.provider.pcsc.control {
    class PcScCardReaderController {
        {static} - LOGGER : Logger
        {static} - instance : PcScCardReaderController
        - Readers : Collection<ICardReader>
        - PcScCardReaderController()
        {static} + getInstance()
        + getCardReaders()
        - findAvailableCardReaders()
        - listCardReaders()
    }
  }


  package de.gematik.ti.cardreader.provider.pcsc.control {
    class CheckReaders {
        ~ CheckReaders()
        + run()
        - findNewAndInform()
        - findRemovedAndInform()
    }
  }

  package de.gematik.ti.cardreader.provider.pcsc.control {
    class CardReaderCardChecker {
        - active : boolean
        + CardReaderCardChecker()
        {static} + startNewInstance()
        + run()
        + stopChecker()
        + isActive()
    }
  }

  package de.gematik.ti.cardreader.provider.pcsc.entities {
    class CardReader {
        - cardTerminal : CardTerminal
        + CardReader()
        + initialize()
        + isInitialized()
        + connect()
        + connect()
        + getName()
        + isCardPresent()
        + waitForCardAbsent()
        + waitForCardPresent()
        + toString()
    }
  }


  CardReader -up-|> ICardReader
  CardReaderProvider -up-|> ICardReaderControllerProvider
  PcScCardReaderController +-down- CheckReaders

  CardReaderCardChecker  <|.. PcScCardReaderController : <<use>>
  CardReaderCardChecker o-- CardReader : cardReader

@enduml
